--- a/equipment-management-frontend/src/index.html
+++ b/equipment-management-frontend/src/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <html lang="en">
 <head>
   <meta charset="utf-8">
